--- a/404.html
+++ b/404.html
@@ -1,12 +1,91 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<html xmlns="http://www.w3.org/1999/xhtml" manifest="" lang="en">
+<head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="description" content=""/>
+    <meta name="author" content="Bowen Cai"/>
 
-<h3>404</h3>
+    <meta property="og:site_name" content="Bowen Cai's Home Page"/>
+    <meta property="og:locale" content="en_US"/>
+
+    <link rel="dns-prefetch" href="">
+    <link rel="prefetch" href=""/>
+
+    <link rel="icon" type="image/ico" href=""/>
+
+    <link rel="stylesheet" href="asset/css/bootstrap.css"/> <!-- CDN min -->
+    <link rel="stylesheet" href="asset/css/font-awesome.css" /> <!-- CDN min -->
+    <link rel="stylesheet" href="asset/css/webface.css"> <!-- inline -->
+
+    <title>404 Page Not Found - Bowen Cai </title>
+
+    <style>
+        html, body {
+            margin: 0px;
+            min-height: 100%;
+            width: 100%;
+            background-color: #f1f1f1;
+        }
+
+        footer {
+            position: absolute;
+            bottom: 0px;
+            left: 0px;
+            width: 100%;
+        }
+        .error-404 {
+            padding: 10%;
+        }
+        .action-404 {
+            margin: 15px;
+        }
+    </style>
+</head>
+<body id="body-top">
+
+
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12 error-404">
+            <div class="text-center">
+                <div class="text-center">
+                    <h1>Oops!</h1>
+                    <h2> Error 404, requested page not found.</h2>
+                </div>
+
+                <div class="top-buffer-40">
+                    <a href="" class="action-404 btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>
+                        Take Me Home </a><a href="" class="action-404 btn btn-default btn-lg"><span class="glyphicon glyphicon-envelope"></span> Contact Support </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<footer class="text-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                Copyright &copy; Bowen Cai 2015
+            </div>
+        </div>
+    </div>
+</footer>
+
+
 
 </body>
+
+<script type="application/javascript" src="asset/js/jquery-1.8.3.js"></script> <!-- CDN min -->
+
+<script type="application/javascript" src="asset/js/jquery.easing.1.3.js"></script>
+<script type="application/javascript" src="asset/js/bootstrap.js"></script> <!-- CDN min -->
+
+<script type="application/javascript" src="asset/js/headroom.js"></script> <!-- inline -->
+
+<!--<script type="application/javascript" src="asset/js/webface.js"></script> &lt;!&ndash; inline &ndash;&gt;-->
+
 </html>
