--- a/index.html
+++ b/index.html
@@ -1,10 +1,75 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" manifest="">
 <head lang="en">
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="description" content=""/>
+    <meta name="author" content="Bowen Cai"/>
+
+    <meta property="og:site_name" content="Bowen Cai's Home Page"/>
+    <meta property="og:locale" content="en_US"/>
+
+    <link rel="dns-prefetch" href="">
+    <link rel="prefetch" href=""/>
+
+    <link rel="icon" type="image/ico" href=""/>
+
+    <link rel="stylesheet" href="asset/css/bootstrap.css"/> <!-- CDN min -->
+    <link rel="stylesheet" href="asset/css/font-awesome.css" /> <!-- CDN min -->
+    <link rel="stylesheet" href="asset/css/webface.css"> <!-- inline -->
+
+    <title>Bowen Cai - Website under construction </title>
+
+
+    <style>
+        html, body {
+            margin: 0px;
+            min-height: 100%;
+            width: 100%;
+            background-color: #f1f1f1;
+        }
+
+        footer {
+            position: absolute;
+            bottom: 0px;
+            left: 0px;
+            width: 100%;
+        }
+
+        .error-404 {
+            padding: 10%;
+        }
+    </style>
+
 </head>
 
 <body>
-    <h3>Hello</h3>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 error-404">
+                <div class="text-center">
+                    <div class="text-center">
+                        <h1>Personal Website Version 3</h1>
+                        <h2><i class="fa fa-gavel"></i> Under construction.</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer class="text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    Copyright &copy; Bowen Cai 2015
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
 </body>
 
 </html>
