add temp index page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" manifest="">
-<head lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" manifest="" lang="en">
+<head>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -19,57 +19,234 @@
     <link rel="stylesheet" href="asset/css/font-awesome.css" /> <!-- CDN min -->
     <link rel="stylesheet" href="asset/css/webface.css"> <!-- inline -->
 
-    <title>Bowen Cai - Website under construction </title>
-
-
-    <style>
-        html, body {
-            margin: 0px;
-            min-height: 100%;
-            width: 100%;
-            background-color: #f1f1f1;
-        }
-
-        footer {
-            position: absolute;
-            bottom: 0px;
-            left: 0px;
-            width: 100%;
-        }
-
-        .error-404 {
-            padding: 10%;
-        }
-    </style>
+    <title>Bowen Cai - Phd Candidate at Texas A&M </title>
 
 </head>
+<body id="body-top" >
 
-<body>
 
+<nav id="wf_nav" class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header page-scroll">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#wf_navbar_collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar hidden"></span>
+                <span class="icon-bar hidden"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#body-top">Bowen Cai</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="wf_navbar_collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="hidden">
+                    <a href="#body-top"></a>
+                </li>
+                <li class="page-scroll" data-menuanchor="about">
+                    <a href="#about">About</a>
+                </li>
+
+                <li class="page-scroll hidden" data-menuanchor="research">
+                    <a href="#research">Research</a>
+                </li>
+
+                <li class="page-scroll hidden" data-menuanchor="projects">
+                    <a href="#projects">Projects</a>
+                </li>
+
+                <li class="page-scroll" data-menuanchor="message">
+                    <a href="#message">Contact</a>
+                </li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+</nav>
+
+
+<header id="about">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 error-404">
-                <div class="text-center">
-                    <div class="text-center">
-                        <h1>Personal Website Version 3</h1>
-                        <h2><i class="fa fa-gavel"></i> Under construction.</h2>
-                    </div>
+            <div class="col-lg-12">
+                <div class="col-md-4 col-sm-6">
+                    <img class="img-responsive avatar" src="asset/img/avatar.jpg" alt="">
+                </div>
+                <div class="col-md-8 col-sm-6">
+                    <h3>Bowen Cai</h3>
+                    <p>Website currently under construction.</p>
+                    <p>Contact at <a href="mailto:feedback2bowen@outlook.com"> feedback2bowen@outlook.com </a></p>
                 </div>
             </div>
         </div>
     </div>
+</header>
 
-    <footer class="text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    Copyright &copy; Bowen Cai 2015
+
+<section id="research" class="hidden">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>Research</h2>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 col-lg-offset-2">
+                <p> Website currently under construction </p>
+            </div>
+            <div class="col-lg-4">
+                <p>Website currently under construction</p>
+            </div>
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <a href="#" class="btn btn-lg btn-outline">
+                    <i class="fa fa-download"></i> Download Papers
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="projects" class="bgcolor-dark hidden">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center txtcolor-white">
+                <h2 class="section-heading">Projects</h2>
+                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4 col-sm-6 portfolio-item">
+                <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                    <div class="portfolio-hover">
+                        <div class="portfolio-hover-content">
+                            <i class="fa fa-search-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img src="asset/img/portfolio/roundicons.png" class="img-responsive" alt="">
+                </a>
+                <div class="portfolio-caption">
+                    <h4>placeholder</h4>
+                    <p class="text-muted">Website currently under construction</p>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 portfolio-item">
+                <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                    <div class="portfolio-hover">
+                        <div class="portfolio-hover-content">
+                            <i class="fa fa-search-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img src="asset/img/portfolio/dreams.png" class="img-responsive" alt="">
+                </a>
+                <div class="portfolio-caption">
+                    <h4>placeholder</h4>
+                    <p class="text-muted">Website currently under construction</p>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 portfolio-item">
+                <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <div class="portfolio-hover">
+                        <div class="portfolio-hover-content">
+                            <i class="fa fa-search-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img src="asset/img/portfolio/treehouse.png" class="img-responsive" alt="">
+                </a>
+                <div class="portfolio-caption">
+                    <h4>placeholder</h4>
+                    <p class="text-muted">Website currently under construction</p>
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
+</section>
+
+
+<section id="message">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>Leave A Message</h2>
+                <hr class="star-primary">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+
+                <form name="sentMessage" id="contactForm">
+                    <div class="row control-group">
+                        <div class="form-group col-xs-12 floating-label-form-group controls">
+                            <label>Name</label>
+                            <input type="text" class="form-control" placeholder="Name" id="cta_name" required="true"
+                                   data-validation-required-message="Please enter your name.">
+
+                            <p class="help-block text-danger"></p>
+                        </div>
+                    </div>
+                    <div class="row control-group">
+                        <div class="form-group col-xs-12 floating-label-form-group controls">
+                            <label>Email Address</label>
+                            <input type="email" class="form-control" placeholder="Email Address" id="cta_email"
+                                   required="true" data-validation-required-message="Please enter your email address.">
+
+                            <p class="help-block text-danger"></p>
+                        </div>
+                    </div>
+                    <div class="row control-group">
+                        <div class="form-group col-xs-12 floating-label-form-group controls">
+                            <label>Message</label>
+                            <textarea rows="5" class="form-control" placeholder="Message" id="cta_message" required
+                                      data-validation-required-message="Please enter your message."></textarea>
+                            <p class="help-block text-danger"></p>
+                        </div>
+                    </div>
+                    <br>
+
+                    <div id="success"></div>
+                    <div class="row">
+                        <div class="form-group col-xs-12">
+                            <button type="submit" id="btn_submit" class="btn btn-primary btn-lg center-block">Send</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<footer class="text-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                Copyright &copy; Bowen Cai 2015
+            </div>
+        </div>
+    </div>
+</footer>
+
+<!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
+<div class="scroll-top page-scroll visible-xs visible-sm">
+    <a class="btn btn-primary" href="#body-top">
+        <i class="fa fa-chevron-up"></i>
+    </a>
+</div>
 
 
 </body>
+
+<script type="application/javascript" src="asset/js/jquery-1.8.3.js"></script> <!-- CDN min -->
+
+<script type="application/javascript" src="asset/js/jquery.easing.1.3.js"></script>
+<script type="application/javascript" src="asset/js/bootstrap.js"></script> <!-- CDN min -->
+
+<script type="application/javascript" src="asset/js/headroom.js"></script> <!-- inline -->
+
+<script type="application/javascript" src="asset/js/webface.js"></script> <!-- inline -->
 
 </html>
