--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 <body id="body-top" >
 
 
-<nav id="wf_nav" class="navbar navbar-default navbar-fixed-top">
+<nav id="wf_nav" class="navbar navbar-default navbar-fixed-top bg-navfoot">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#wf_navbar_collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
-                <span class="icon-bar hidden"></span>
-                <span class="icon-bar hidden"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#body-top">Bowen Cai</a>
@@ -49,16 +49,16 @@
                     <a href="#about">About</a>
                 </li>
 
-                <li class="page-scroll hidden" data-menuanchor="research">
+                <li class="page-scroll" data-menuanchor="research">
                     <a href="#research">Research</a>
                 </li>
 
-                <li class="page-scroll hidden" data-menuanchor="projects">
+                <li class="page-scroll" data-menuanchor="projects">
                     <a href="#projects">Projects</a>
                 </li>
 
-                <li class="page-scroll" data-menuanchor="message">
-                    <a href="#message">Contact</a>
+                <li class="page-scroll" data-menuanchor="contact">
+                    <a href="#contact">Contact</a>
                 </li>
             </ul>
         </div>
@@ -68,7 +68,7 @@
 </nav>
 
 
-<header id="about">
+<header id="about" class="bg-about">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -86,7 +86,7 @@
 </header>
 
 
-<section id="research" class="hidden">
+<section id="research">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -110,7 +110,7 @@
     </div>
 </section>
 
-<section id="projects" class="bgcolor-dark hidden">
+<section id="projects" class="bg-projects">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center txtcolor-white">
@@ -167,7 +167,7 @@
 </section>
 
 
-<section id="message">
+<section id="contact">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -178,7 +178,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
 
-                <form name="sentMessage" id="contactForm">
+                <form name="sentMessage" id="contact_form">
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Name</label>
@@ -220,7 +220,7 @@
 </section>
 
 
-<footer class="text-center">
+<footer class="text-center bg-navfoot">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
