--- a/404.html
+++ b/404.html
@@ -19,53 +19,78 @@
     <link rel="stylesheet" href="asset/css/font-awesome.css" /> <!-- CDN min -->
     <link rel="stylesheet" href="asset/css/webface.css"> <!-- inline -->
 
-    <title>404 Page Not Found - Bowen Cai </title>
+    <title>Bowen Cai - Phd Candidate at Texas A&M </title>
 
     <style>
-        html, body {
-            margin: 0px;
-            min-height: 100%;
-            width: 100%;
-            background-color: #f1f1f1;
+        .action-404 {
+            margin: 15px;
         }
-
         footer {
             position: absolute;
             bottom: 0px;
             left: 0px;
             width: 100%;
         }
-        .error-404 {
-            padding: 10%;
-        }
-        .action-404 {
-            margin: 15px;
-        }
     </style>
+
+
 </head>
-<body id="body-top">
+<body id="body-top" >
 
 
-<div class="container">
-    <div class="row">
-        <div class="col-lg-12 error-404">
-            <div class="text-center">
-                <div class="text-center">
-                    <h1>Oops!</h1>
-                    <h2> Error 404, requested page not found.</h2>
+<nav id="wf_nav" class="navbar navbar-default navbar-fixed-top bg-navfoot">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header page-scroll">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#wf_navbar_collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#body-top">Bowen Cai</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="wf_navbar_collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="hidden">
+                    <a href="#body-top"></a>
+                </li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+</nav>
+
+
+<section class="bg-error">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <div>
+                    <h1>Ooooooooops!</h1>
+                    <h3>The page you are looking for</h3>
+                    <h3 id="url-404" class="text-danger">  </h3>
+                    <h3>is <i><em>nowhere</em></i> to be found.</h3>
+                    <h5 class="top-buffer-40"> Error 404, requested page not found.</h5>
                 </div>
 
-                <div class="top-buffer-40">
-                    <a href="" class="action-404 btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>
-                        Take Me Home </a><a href="" class="action-404 btn btn-default btn-lg"><span class="glyphicon glyphicon-envelope"></span> Contact Support </a>
+                <div class="top-buffer-20">
+                    <a href="http://www.caibowen.com" class="action-404 btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>
+                        Take Me Home </a>
+                    <a href="http://www.caibowen.com/#contact" class="action-404 btn btn-default btn-lg"><span class="glyphicon glyphicon-envelope"></span> Contact Support </a>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</section>
 
 
-<footer class="text-center">
+
+<footer class="text-center bg-navfoot">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -75,6 +100,12 @@
     </div>
 </footer>
 
+<!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
+<div class="scroll-top page-scroll visible-xs visible-sm">
+    <a class="btn btn-primary" href="#body-top">
+        <i class="fa fa-chevron-up"></i>
+    </a>
+</div>
 
 
 </body>
@@ -84,8 +115,10 @@
 <script type="application/javascript" src="asset/js/jquery.easing.1.3.js"></script>
 <script type="application/javascript" src="asset/js/bootstrap.js"></script> <!-- CDN min -->
 
-<script type="application/javascript" src="asset/js/headroom.js"></script> <!-- inline -->
+<script>
+    var thisurl = window.location.href;
+    document.getElementById('url-404').innerHTML = thisurl;
+</script>
 
-<!--<script type="application/javascript" src="asset/js/webface.js"></script> &lt;!&ndash; inline &ndash;&gt;-->
 
 </html>
