--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="row">
             <div class="col-lg-12 text-center txtcolor-white">
                 <h2 class="section-heading">Projects</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                <h3 class="section-subheading text-muted">Website currently under construction.</h3>
             </div>
         </div>
 
@@ -127,7 +127,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="asset/img/portfolio/roundicons.png" class="img-responsive" alt="">
+                    <img src="https://dl.dropboxusercontent.com/s/iklpmr1jdyktdn2/gplume_struture.jpg" class="img-responsive" alt="">
                 </a>
                 <div class="portfolio-caption">
                     <h4>placeholder</h4>
@@ -141,7 +141,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="asset/img/portfolio/dreams.png" class="img-responsive" alt="">
+                    <img src="https://dl.dropboxusercontent.com/s/hrji1a2phi605x0/edit.JPG" class="img-responsive" alt="">
                 </a>
                 <div class="portfolio-caption">
                     <h4>placeholder</h4>
@@ -155,7 +155,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="asset/img/portfolio/treehouse.png" class="img-responsive" alt="">
+                    <img src="https://dl.dropboxusercontent.com/s/0xsqvui990n8vig/Starter_Maps.png" class="img-responsive" alt="">
                 </a>
                 <div class="portfolio-caption">
                     <h4>placeholder</h4>
