--- a/index.html
+++ b/index.html
@@ -19,11 +19,26 @@
     <link rel="stylesheet" href="asset/css/font-awesome.css" /> <!-- CDN min -->
     <link rel="stylesheet" href="asset/css/webface.css"> <!-- inline -->
 
+    <script type="text/javascript">
+        if(self != top) {
+            top.location = self.location;
+        }
+        var lang = navigator.languages ? navigator.languages[0] : (navigator.language || navigator.userLanguage);
+
+    </script>
+
     <title>Bowen Cai - Phd Candidate at Texas A&M </title>
 
 </head>
+
 <body id="body-top" >
 
+<noscript>
+    <div class="alert alert-warning text-center top-buffer">
+        <h4>This site relies heavily on Javascript.</h4>
+        <h4> You need to enable Javascript in your browser.</h4>
+    </div>
+</noscript>
 
 <nav id="wf_nav" class="navbar navbar-default navbar-fixed-top bg-navfoot">
     <div class="container">
@@ -166,7 +181,6 @@
     </div>
 </section>
 
-
 <section id="contact">
     <div class="container">
         <div class="row">
@@ -246,6 +260,7 @@
 <script type="application/javascript" src="asset/js/bootstrap.js"></script> <!-- CDN min -->
 
 <script type="application/javascript" src="asset/js/headroom.js"></script> <!-- inline -->
+<script type="application/javascript" src="asset/js/jqBootstrapValidation.js"></script>
 
 <script type="application/javascript" src="asset/js/webface.js"></script> <!-- inline -->
 
