--- a/404.html
+++ b/404.html
@@ -15,9 +15,11 @@
 
     <link rel="icon" type="image/ico" href=""/>
 
-    <link rel="stylesheet" href="asset/css/bootstrap.css"/> <!-- CDN min -->
-    <link rel="stylesheet" href="asset/css/font-awesome.css" /> <!-- CDN min -->
+    <link rel="stylesheet" href="asset/css/bootstrap.min.css"/> <!-- CDN min -->
+    <link rel="stylesheet" href="asset/css/font-awesome.min.css" /> <!-- CDN min -->
+    <link rel="stylesheet" href="asset/css/ladda.min.css"/>
     <link rel="stylesheet" href="asset/css/webface.css"> <!-- inline -->
+
 
     <title>Bowen Cai - Phd Candidate at Texas A&M </title>
 
@@ -26,9 +28,9 @@
             margin: 15px;
         }
         footer {
-            position: absolute;
-            bottom: 0px;
-            left: 0px;
+            position: relative;
+            bottom: 0;
+            left: 0;
             width: 100%;
         }
     </style>
@@ -108,17 +110,21 @@
 </div>
 
 
-</body>
-
 <script type="application/javascript" src="asset/js/jquery-1.8.3.js"></script> <!-- CDN min -->
 
-<script type="application/javascript" src="asset/js/jquery.easing.1.3.js"></script>
-<script type="application/javascript" src="asset/js/bootstrap.js"></script> <!-- CDN min -->
+<script type="application/javascript" src="asset/js/jquery.easing.1.3.js"></script> <!-- CDN min -->
+<script type="application/javascript" src="asset/js/bootstrap.min.js"></script> <!-- CDN min -->
+
+<script type="application/javascript" src="asset/js/headroom.js"></script> <!-- inline -->
+<script type="application/javascript" src="asset/js/jqBootstrapValidation.js"></script>
+<script type="application/javascript" src="asset/js/spin.min.js"></script>
+<script type="application/javascript" src="asset/js/ladda.min.js"></script>
 
 <script>
     var thisurl = window.location.href;
     document.getElementById('url-404').innerHTML = thisurl;
 </script>
 
+</body>
 
 </html>
