--- a/index.html
+++ b/index.html
@@ -33,29 +33,27 @@
             }
 
             var req = new XMLHttpRequest();
+            req.open("GET", "http://webface-backend.appspot.com/api/location-pv-count?app-id=cbw-webface", true); // true for asynchronous
             req.timeout = 4000;
             req.ontimeout = function() {
                 Status.location = null
             };
             req.onreadystatechange = function() {
                 if (req.readyState == 4 && req.status == 200) {
-                    var location = {};
                     try {
-                        location = JSON.parse(req.responseText);
+                        Status.location = JSON.parse(req.responseText);
                     } catch (e) {
-                        location = null;
+                        Status.location = null;
                     }
-                    Status.location = location;
                 }
             };
-            req.open("GET", "http://webface-backend.appspot.com/api/location-pv-count?app-id=cbw-webface", true); // true for asynchronous
             req.send(null);
         }
 
         init();
     </script>
 
-    <title>Bowen Cai - Phd Candidate at Texas A&M </title>
+    <title>Bowen Cai - Phd Candidate at Texas A&amp;M </title>
 
 </head>
 
@@ -290,11 +288,9 @@
 </div>
 
 
-</body>
-
 <script type="application/javascript" src="asset/js/jquery-1.8.3.js"></script> <!-- CDN min -->
 
-<script type="application/javascript" src="asset/js/jquery.easing.1.3.js"></script>
+<script type="application/javascript" src="asset/js/jquery.easing.1.3.js"></script> <!-- CDN min -->
 <script type="application/javascript" src="asset/js/bootstrap.min.js"></script> <!-- CDN min -->
 
 <script type="application/javascript" src="asset/js/headroom.js"></script> <!-- inline -->
@@ -303,5 +299,7 @@
 <script type="application/javascript" src="asset/js/ladda.min.js"></script>
 
 <script type="application/javascript" src="asset/js/webface.js"></script> <!-- inline -->
+
+</body>
 
 </html>
