--- a/__404.html
+++ b/__404.html
@@ -73,8 +73,17 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <div>
-                    <p>To and ensure long term accessibility,</p>
-                    <p>This site going through some process and will have to be shutdown temporarily.</p>
+                    <h1>Ooooooooops!</h1>
+                    <h3>The page you are looking for</h3>
+                    <h3 id="url-404" class="text-danger">  </h3>
+                    <h3>is <i><em>nowhere</em></i> to be found.</h3>
+                    <h5 class="top-buffer-40"> Error 404, requested page not found.</h5>
+                </div>
+
+                <div class="top-buffer-20">
+                    <a href="http://www.caibowen.com" class="action-404 btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>
+                        Take Me Home </a>
+                    <a href="http://www.caibowen.com/#contact" class="action-404 btn btn-default btn-lg"><span class="glyphicon glyphicon-envelope"></span> Contact Support </a>
                 </div>
             </div>
         </div>
