--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="asset/css/webface.css"> <!-- inline -->
 
 
-    <title>Bowen Cai - Phd Candidate at Texas A&M </title>
+    <title>Bowen Cai - Phd Student at Texas A&amp;M </title>
 
     <style>
         .action-404 {
@@ -73,7 +73,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <div>
-                    <p>To and ensure long term accessibility,</p>
+                    <p>To ensure long term accessibility,</p>
                     <p>This site going through some process and will have to be shutdown temporarily.</p>
                 </div>
             </div>
