--- a/__404.html
+++ b/__404.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="asset/css/webface.css"> <!-- inline -->
 
 
-    <title>Bowen Cai - Phd Candidate at Texas A&M </title>
+    <title>Page Not Found - Bowen Cai</title>
 
     <style>
         .action-404 {
