--- a/__404.html
+++ b/__404.html
@@ -28,7 +28,7 @@
             margin: 15px;
         }
         footer {
-            position: relative;
+            position: absolute;
             bottom: 0;
             left: 0;
             width: 100%;
