add intro text and the corresponding zh-CN

--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="asset/css/webface.css"> <!-- inline -->
 
 
-    <title>Bowen Cai - Phd Student at Texas A&amp;M </title>
+    <title>Page Not Found - Bowen Cai</title>
 
     <style>
         .action-404 {
