--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
     <meta property="og:site_name" content="Bowen Cai's Home Page"/>
     <meta property="og:locale" content="en_US"/>
 
-    <!--<link rel="dns-prefetch" href="">-->
+    <link rel="dns-prefetch" href="http://ajax.aspnetcdn.com">
+    <link rel="dns-prefetch" href="http://cdnjs.cloudflare.com">
     <!--<link rel="prefetch" href=""/>-->
     <!--<link rel="icon" type="image/ico" href=""/>-->
 
-    <link rel="stylesheet" href="asset/css/bootstrap.min.css"/> <!-- CDN min -->
-    <link rel="stylesheet" href="asset/css/font-awesome.min.css" /> <!-- CDN min -->
-    <link rel="stylesheet" href="asset/css/ladda.min.css"/>
-    <link rel="stylesheet" href="asset/css/webface.css"> <!-- inline -->
+    <!--<link rel="stylesheet" href="asset/css/bootstrap.min.css"/> &lt;!&ndash; CDN min &ndash;&gt;-->
+    <!--<link rel="stylesheet" href="asset/css/font-awesome.min.css" /> &lt;!&ndash; CDN min &ndash;&gt;-->
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="asset/css/ladda.min.css"/> <!-- merge -->
+    <link rel="stylesheet" href="asset/css/webface.css"> <!-- merge -->
 
     <title class="i18n-txt" data-i18n-key="page-title">Bowen Cai - Phd Student at Texas A&amp;M </title>
 
@@ -42,13 +45,12 @@
             },
             init : function() {
                 // 1. avoid hijacking from ISPs, namely, CMCC, China Telecom
-                if (self != top) {
+                if (self != top)
                     top.location = self.location;
-                }
                 var reqLoc = new XMLHttpRequest();
                 reqLoc.open("GET", "http://webface-backend.appspot.com/api/location-pv-count?app-id=cbw-webface",
-                        true); // true for asynchronous
-                // do not wait for respnse, as some request comes from behind the GWF
+                        true); // true for async
+                // do not wait for response, as some request comes from behind the GWF
                 reqLoc.onreadystatechange = function () {
                     if (reqLoc.readyState == 4 && reqLoc.status == 200)
                         Webface.location = JSON.parse(reqLoc.responseText);
@@ -319,17 +321,22 @@
 </div>
 
 
-<script type="application/javascript" src="asset/js/jquery-1.8.3.js"></script> <!-- CDN min -->
+<!--<script type="application/javascript" src="asset/js/jquery-1.11.3.min.js"></script> &lt;!&ndash; CDN min &ndash;&gt;-->
+<script type="application/javascript" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
+<!--<script type="application/javascript" src="asset/js/bootstrap.min.js"></script> &lt;!&ndash; CDN min &ndash;&gt;-->
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 <script type="application/javascript" src="asset/js/jquery.easing.1.3.js"></script> <!-- CDN min -->
-<script type="application/javascript" src="asset/js/bootstrap.min.js"></script> <!-- CDN min -->
 
-<script type="application/javascript" src="asset/js/headroom.js"></script> <!-- inline -->
+<!--<script type="application/javascript" src="asset/js/headroom.js"></script>-->
+<script type="application/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/headroom/0.7.0/headroom.min.js"></script>
+
 <script type="application/javascript" src="asset/js/jqBootstrapValidation.js"></script>
-<script type="application/javascript" src="asset/js/spin.min.js"></script>
-<script type="application/javascript" src="asset/js/ladda.min.js"></script>
 
-<script type="application/javascript" src="asset/js/webface.js"></script> <!-- inline -->
+<script type="application/javascript" src="asset/js/spin.min.js"></script> <!-- merge -->
+<script type="application/javascript" src="asset/js/ladda.min.js"></script> <!-- merge -->
+
+<script type="application/javascript" src="asset/js/webface.js"></script>
 
 </body>
 
